# alloy

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  test.ac
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  transpiler.rs  ty.rs  type_checker.rs
src/ast/: mod.rs  ty.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/transpiler/: mod.rs  transpiler.rs
src/type_checker/: mod.rs
tests/: integration_tests.rs  lexer_tests.rs  parser_tests.rs  transpiler_tests.rs  type_checker_tests.rs
