[package]
name = "alloy"
version = "0.1.0"
edition = "2021"
authors = ["@ovnanova"]
description = "Alloy"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/ovnanova/alloy"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
miette = "7.2.0"
owo-colors = "4.1.0"
thin-vec = "0.2.13"
tracing = "0.1.40"

[[bin]]
name = "alloy"
path = "src/main.rs"
